react hacker updated

--- a/hacker-news-react/src/components/Header/Header.css
+++ b/hacker-news-react/src/components/Header/Header.css
@@ -1,7 +1,9 @@
 .Header {
+    max-width: 1500px;
     display: flex;
     background-color: orangered;
     align-items: flex-start;
+    margin: auto;
 }
 
 .Header__Title {
