bit-people update

--- a/bit-people/src/components/Header/Header.css
+++ b/bit-people/src/components/Header/Header.css
@@ -27,10 +27,16 @@
 
 .Header__icons_grid {
   display: block;
+  position: absolute;
+  right: 2px;
 }
 
 .Header__icons_list {
   position: absolute;
   right: 2px;
-  display: none;
+  display: block;
 }
+
+/* .active{
+  display: block;
+} */
