bit-people react mod

--- a/bit-people/src/components/Users/ListUser.css
+++ b/bit-people/src/components/Users/ListUser.css
@@ -3,8 +3,14 @@
     border: solid 1px lightgray;
     width: 90%;
     margin: 0 auto;
+    padding: 6px;
 }
 
+.ListUser:hover {
+    background-color: rgb(237, 107, 134);
+    cursor: pointer;
+    padding: 25px;
+}
 .ListUser__img{
     margin-top: 5px;
     margin-left: 5px;
@@ -18,4 +24,9 @@
 }
 .ListUser__info p{
     margin: 0;
+    padding: 3px;
+}
+
+.female{
+    background-color: #ffebee
 }
